--- a/portfolio.html
+++ b/portfolio.html
@@ -42,10 +42,7 @@
     <main class="d-flex align-items-center w-100">
         <div class="container d-flex flex-column align-items-center">
             <h1>Over mij</h1>
-            <p class="fs-4 text-center">Hallo ik ben Sibren. En ik ben een software developer. Ik bouw websites, maak
-                applicaties met javascript
-                en en ik werk met databases zoals mongodb. Programmeren is mijn sterkte punt dus vind ik het vaak het
-                leukst om scripts toe te voegen aan websites en applicaties te maken.</p>
+            <p class="fs-4 text-center"></p>
         </div>
     </main>
 
