portfolio part toegevoegd

--- a/about-me.html
+++ b/about-me.html
@@ -39,7 +39,7 @@
         </nav>
     </header>
 
-    <main class="d-flex align-items-center w-100">
+    <main class="about-me-bg d-flex align-items-center w-100">
         <div class="container d-flex flex-column align-items-center">
             <h1>Over mij</h1>
             <p class="fs-4 text-center">Hallo ik ben Sibren. En ik ben een software developer. Ik bouw websites, maak
