--- a/projects.html
+++ b/projects.html
@@ -79,7 +79,7 @@
                             </div>
                         </div>
                         <div class="carousel-item active">
-                            <div class="card-wrapper container-sm d-flex   justify-content-around">
+                            <div class="card-wrapper container-sm d-flex justify-content-around">
                                 <div class="card" style="width: 18rem;">
                                     <img src="/img/escaperoom-img.png" class="card-img-top" alt="...">
                                     <div class="card-body">
@@ -101,7 +101,7 @@
                                     </div>
                                 </div>
                                 <div class="card" style="width: 18rem;">
-                                    <img src="..." class="card-img-top" alt="...">
+                                    <img src="img/Joe-data.png" class="card-img-top" alt="...">
                                     <div class="card-body">
                                         <h5 class="card-title">Card title</h5>
                                         <p class="card-text">Some quick example text to build on the card title and make
