cards goe positioned

--- a/projects.html
+++ b/projects.html
@@ -51,28 +51,24 @@
                                 <div class="card" style="width: 18rem;">
                                     <img src="/img/smick-img.png" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">web catalogus</h5>
+                                        <h5 class="card-title">Web catalogus</h5>
                                         <p class="card-text">Onze web catalogus genaamd Smick. Samen met Mike van der Veer en Yannick Daantje hebben we de catalogus over 3 games gemaakt: League of Legends, Smite en Overwatch.</p>
-                                        <a href="" class="btn btn-primary">Go somewhere</a>
+                                        <a href="" class="btn btn-primary mt-4">Go somewhere</a>
                                     </div>
                                 </div>
                                 <div class="card" style="width: 18rem;">
                                     <img src="/img/themaweek-img.png" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make
-                                            up
-                                            the bulk of the card's content.</p>
-                                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                                        <h5 class="card-title">Themaweek 2</h5>
+                                        <p class="card-text">Voor m'n project themweek 2 heb ik een rhytm game gemaakt in plain javascript. Het leren omgaan met postition top en left is het ingewikkeltst.</p>
+                                        <a href="#" class="btn btn-primary mt-5">Go somewhere</a>
                                     </div>
                                 </div>
                                 <div class="card" style="width: 18rem;">
                                     <img src="/img/buildagame-img.png" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make
-                                            up
-                                            the bulk of the card's content.</p>
+                                        <h5 class="card-title">Build a game</h5>
+                                        <p class="card-text">Project in een groepje van 3 waar ieder z'n eigen game maakte en dan samen in 1 site stoppen. Elke game is in plain javascript gemaakt. Wat ik vooral heb geleerd tijdens het maken van dit project is over array positioning.</p>
                                         <a href="#" class="btn btn-primary">Go somewhere</a>
                                     </div>
                                 </div>
@@ -83,30 +79,24 @@
                                 <div class="card" style="width: 18rem;">
                                     <img src="/img/escaperoom-img.png" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make
-                                            up
-                                            the bulk of the card's content.</p>
+                                        <h5 class="card-title">Escape room</h5>
+                                        <p class="card-text">Voor themaweek 1 heb ik een escape room gemaakt in plain javascript. Gemaakt in een groepje van 3. Hier ben ik achter gekomen dat het gebruik maken van image maps niet een goed idee is vanwege schermgroottes.</p>
                                         <a href="#" class="btn btn-primary">Go somewhere</a>
                                     </div>
                                 </div>
                                 <div class="card" style="width: 18rem;">
                                     <img src="/img/hoger-lager-img.png" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make
-                                            up
-                                            the bulk of the card's content.</p>
+                                        <h5 class="card-title">Hoger lager</h5>
+                                        <p class="card-text">Mijn allereerste project ooit. Tijdens het maken heb ik extreem veel over de javascript basics geleerd. Ook heb ik veel over html en css geleerd.</p>
                                         <a href="#" class="btn btn-primary">Go somewhere</a>
                                     </div>
                                 </div>
                                 <div class="card" style="width: 18rem;">
                                     <img src="img/Joe-data.png" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make
-                                            up
-                                            the bulk of the card's content.</p>
+                                        <h5 class="card-title">Dashboard</h5>
+                                        <p class="card-text">Voor dit project moest ik een dashboard maken. Dit ging in een groepje van 3. Ik heb over registratie/inloggen geleerd door een mongdb te gebruiken en hoe je chartJS moet gebruiken.</p>
                                         <a href="#" class="btn btn-primary">Go somewhere</a>
                                     </div>
                                 </div>
