--- a/projects.html
+++ b/projects.html
@@ -53,7 +53,7 @@
                                     <div class="card-body">
                                         <h5 class="card-title">Web catalogus</h5>
                                         <p class="card-text">Onze web catalogus genaamd Smick. Samen met Mike van der Veer en Yannick Daantje hebben we de catalogus over 3 games gemaakt: League of Legends, Smite en Overwatch.</p>
-                                        <a href="" class="btn btn-primary mt-4">Go somewhere</a>
+                                        <a href="" class="btn btn-primary mt-4">Github link</a>
                                     </div>
                                 </div>
                                 <div class="card" style="width: 18rem;">
@@ -61,7 +61,7 @@
                                     <div class="card-body">
                                         <h5 class="card-title">Themaweek 2</h5>
                                         <p class="card-text">Voor m'n project themweek 2 heb ik een rhytm game gemaakt in plain javascript. Het leren omgaan met postition top en left is het ingewikkeltst.</p>
-                                        <a href="#" class="btn btn-primary mt-5">Go somewhere</a>
+                                        <a href="#" class="btn btn-primary mt-5">Github link</a>
                                     </div>
                                 </div>
                                 <div class="card" style="width: 18rem;">
@@ -69,7 +69,7 @@
                                     <div class="card-body">
                                         <h5 class="card-title">Build a game</h5>
                                         <p class="card-text">Project in een groepje van 3 waar ieder z'n eigen game maakte en dan samen in 1 site stoppen. Elke game is in plain javascript gemaakt. Wat ik vooral heb geleerd tijdens het maken van dit project is over array positioning.</p>
-                                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                                        <a href="#" class="btn btn-primary">Github link</a>
                                     </div>
                                 </div>
                             </div>
@@ -81,7 +81,7 @@
                                     <div class="card-body">
                                         <h5 class="card-title">Escape room</h5>
                                         <p class="card-text">Voor themaweek 1 heb ik een escape room gemaakt in plain javascript. Gemaakt in een groepje van 3. Hier ben ik achter gekomen dat het gebruik maken van image maps niet een goed idee is vanwege schermgroottes.</p>
-                                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                                        <a href="#" class="btn btn-primary">Github link</a>
                                     </div>
                                 </div>
                                 <div class="card" style="width: 18rem;">
@@ -89,7 +89,7 @@
                                     <div class="card-body">
                                         <h5 class="card-title">Hoger lager</h5>
                                         <p class="card-text">Mijn allereerste project ooit. Tijdens het maken heb ik extreem veel over de javascript basics geleerd. Ook heb ik veel over html en css geleerd.</p>
-                                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                                        <a href="#" class="btn btn-primary mt-5">Github link</a>
                                     </div>
                                 </div>
                                 <div class="card" style="width: 18rem;">
@@ -97,7 +97,7 @@
                                     <div class="card-body">
                                         <h5 class="card-title">Dashboard</h5>
                                         <p class="card-text">Voor dit project moest ik een dashboard maken. Dit ging in een groepje van 3. Ik heb over registratie/inloggen geleerd door een mongdb te gebruiken en hoe je chartJS moet gebruiken.</p>
-                                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                                        <a href="#" class="btn btn-primary mt-4">Github link</a>
                                     </div>
                                 </div>
                             </div>
