--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -43,7 +44,7 @@
         <div class="container d-flex flex-column align-items-center">
             <h1 class="text-white">Welkom</h1>
             <h2 class="text-white mt-1">Bij mijn portfolio</h2>
-            <button type="button" class="btn btn-primary btn-lg mt-4"><a class="text-white text-decoration-none" href="projects.html">Bekijk mijn projecten</a></button>
+            <a class="btn btn-primary btn-lg mt-4 text-white text-decoration-none" href="projects.html">Bekijk mijn projecten</a>
         </div>
     </section>
 
@@ -53,11 +54,11 @@
             <div class="d-flex">
                 <div class="mail-container">
                     <i class="bi bi-envelope-fill"></i>
-                    <a href="mailto:Sibrenboode@outlook.com" class="mail">SibrenBoode@outlook.com</i></a>
+                    <a href="mailto:Sibrenboode@outlook.com" class="mail">SibrenBoode@outlook.com</a>
                 </div>
                 <div class="tel-container">
                     <i class="bi bi-phone-fill"></i>
-                    <a href="" class="mail">+31 6 38391674</i></a>
+                    <a href="" class="mail">+31 6 38391674</a>
                 </div>
             </div>
         </div>
