--- a/projects.html
+++ b/projects.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -126,11 +127,11 @@
             <div class="d-flex">
                 <div class="mail-container">
                     <i class="bi bi-envelope-fill"></i>
-                    <a href="mailto:Sibrenboode@outlook.com" class="mail">SibrenBoode@outlook.com</i></a>
+                    <a href="mailto:Sibrenboode@outlook.com" class="mail">SibrenBoode@outlook.com</a>
                 </div>
                 <div class="tel-container">
                     <i class="bi bi-phone-fill"></i>
-                    <a href="" class="mail">+31 6 38391674</i></a>
+                    <a href="" class="mail">+31 6 38391674</a>
                 </div>
             </div>
         </div>
