--- a/portfolio.html
+++ b/portfolio.html
@@ -47,9 +47,10 @@
                 Dit portfolio laat nu zien over wat ik kan en wat ik heb gemaakt. Maar ik ben van plan er meer in te stoppen, zoals nieuwe project updates. Ook de projecten die niet van school zijn. Hier beneden zie je mijn planne die ik had voor dat ik begon met het maken van mijn porfolio. De groene kleur heb ik eruit gelaten omdat ik het eigenlijk niet vond passen.
             </p>
             <h2 class="mt-1">Portfolio plan:</h2>
-            <div class="d-flex">
-                <img src="img/pofo_color_theme.png" alt="" class="w-50 h-50">
+            <div class="d-flex flex-wrap justify-content-center mt-3">
+                <img src="img/pofo_color_theme.png" alt="" class="w-25">
                 <img src="img/pofo_sitemap.png" alt="" class="w-50 h-50 m-auto">
+                <img src="img/insiration-pofo.png" alt="" class="w-25">
 
             </div>
         </div>
