--- a/tips.html
+++ b/tips.html
@@ -48,24 +48,20 @@
             <!-- Masthead Avatar Image-->
             <img class="masthead-avatar mb-5" src="assets/img/avataaars.svg" alt="..." />
             <!-- Masthead Heading-->
-            <h1 class="masthead-heading text-uppercase mb-0">Arbeidsrechten en plichten</h1>
+            <h1 class="masthead-heading text-uppercase mb-0">Arbeidscontracten</h1>
             <!-- Icon Divider-->
             <div class="divider-custom divider-light">
                 <div class="divider-custom-line"></div>
                 <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                 <div class="divider-custom-line"></div>
             </div>
-            <p class="lead">Om te zorgen voor een goede werkomgeving worden er natuurlijk afspraken gemaakt over het
-                gedrag tussen de werkgever en werknemer. Dus als werknemer moet je rekening houden met de volgende
-                dingen: </p>
+            <p class="lead2">Het zoeken naar werk kan zeker spannend zijn. Hier hebben we een lijst met tips die je
+                kunnen helpen met het zoeken van werk: </p>
         </div>
     </header>
     <!-- Portfolio Section-->
     <section class="page-section portfolio" id="portfolio">
         <div class="container">
-            <!-- Portfolio Section Heading-->
-            <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">arbeidsrechten
-            </h2>
             <!-- Icon Divider-->
             <div class="divider-custom">
                 <div class="divider-custom-line"></div>
@@ -74,79 +70,34 @@
             </div>
             <!-- Portfolio Grid Items-->
             <div class="row justify-content-center">
-                <h3 class="text-center">Gelijke behandeling</h3>
+                <h3 class="text-center">Maak een indrukwekkend cv</h3>
                 <p class="lead text-center mb-4">
-                    Werknemers hebben recht op gelijke behandeling bij werving, arbeidsvoorwaarden, promotie, loon,
-                    opleiding, pensioen en ontslag. Discriminatie is verboden.
+                    Zorg ervoor dat je cv duidelijk en professioneel is. Vermeld je opleiding, stages, vrijwilligerswerk
+                    en eventuele bijbanen.
                 </p>
-                <h3 class="text-center">Veilige werkomstandigheden</h3>
+                <h3 class="text-center">Netwerken</h3>
                 <p class="lead text-center mb-4">
-                    Werknemers hebben recht op een veilige en gezonde werkomgeving. Dit omvat bescherming tegen
-                    ongevallen en beroepsziekten.
+                    Gebruik platforms zoals LinkedIn om in contact te komen met professionals in jouw vakgebied.
+                    Netwerken kan je helpen om verborgen vacatures te ontdekken.
                 </p>
-                <h3 class="text-center">Redelijke betaling</h3>
+                <h3 class="text-center">Open sollicitaties</h3>
                 <p class="lead text-center mb-4">
-                    Werknemers hebben recht op een eerlijk loon.
+                    Stuur open sollicitaties naar bedrijven waar je graag zou willen werken, zelfs als ze geen vacatures
+                    hebben. Dit toont initiatief en kan deuren openen.
                 </p>
-            </div>
-        </div>
-    </section>
-    <!-- About Section-->
-    <section class="page-section bg-primary text-white mb-0" id="about">
-        <div class="container">
-            <!-- About Section Heading-->
-            <h2 class="page-section-heading text-center text-uppercase text-white">Plichten van de werknemers</h2>
-            <!-- Icon Divider-->
-            <div class="divider-custom divider-light">
-                <div class="divider-custom-line"></div>
-                <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                <div class="divider-custom-line"></div>
-            </div>
-            <!-- About Section Content-->
-            <div class="row justify-content-center">
-                <h3 class="text-center">Nakoming van arbeidscontract</h3>
+                <h3 class="text-center">Doe ervaring op</h3>
                 <p class="lead text-center mb-4">
-                    Werknemers moeten de taken en verantwoordelijkheden uitvoeren zoals vastgelegd in hun
-                    arbeidscontract.
+                    Overweeg stages, vrijwilligerswerk of tijdelijke banen om ervaring op te doen en je cv te
+                    versterken.
                 </p>
-                <h3 class="text-center">Veiligheidsvoorschriften naleven</h3>
+                <h3 class="text-center">Focus op persoonlijke ontwikkeling</h3>
                 <p class="lead text-center mb-4">
-                    Werknemers moeten zich houden aan de veiligheids- en gezondheidsvoorschriften op de werkplek.
+                    Volg cursussen of trainingen om je vaardigheden te verbeteren en jezelf aantrekkelijker te maken
+                    voor werkgevers.
                 </p>
-                <h3 class="text-center">Vertrouwelijkheid</h3>
-                <p class="lead text-center">
-                    Werknemers moeten vertrouwelijke informatie van het bedrijf beschermen en niet delen met
-                    onbevoegden.
-                </p>
-            </div>
-        </div>
-    </section>
-    <section class="page-section portfolio" id="portfolio">
-        <div class="container">
-            <!-- Portfolio Section Heading-->
-            <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Sociale zekerheid
-            </h2>
-            <!-- Icon Divider-->
-            <div class="divider-custom">
-                <div class="divider-custom-line"></div>
-                <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                <div class="divider-custom-line"></div>
-            </div>
-            <!-- Portfolio Grid Items-->
-            <div class="row justify-content-center">
-                <h3 class="text-center">Ziekte- en arbeidsongeschiktheidsuitkeringen</h3>
+                <h3 class="text-center">Gebruik je school als hulpbron</h3>
                 <p class="lead text-center mb-4">
-                    Werknemers hebben recht op uitkeringen bij ziekte of arbeidsongeschiktheid.
-                </p>
-                <h3 class="text-center">Pensioen</h3>
-                <p class="lead text-center mb-4">
-                    Werknemers bouwen pensioenrechten op tijdens hun werkzame leven, die hen een inkomen verschaffen na
-                    hun pensionering.
-                </p>
-                <h3 class="text-center">Werkloosheidsuitkeringen</h3>
-                <p class="lead text-center mb-4">
-                    Bij verlies van werk hebben werknemers recht op een werkloosheidsuitkering, afhankelijk van hun
-                    arbeidsverleden en de nationale regelgeving.
+                    Veel scholen bieden loopbaanbegeleiding en hebben connecties met bedrijven.
                 </p>
             </div>
         </div>
@@ -168,6 +119,7 @@
             </div>
         </div>
     </footer>
+    
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
