--- a/index.html
+++ b/index.html
@@ -48,60 +48,17 @@
             <!-- Masthead Avatar Image-->
             <img class="masthead-avatar mb-5" src="assets/img/avataaars.svg" alt="..." />
             <!-- Masthead Heading-->
-            <h1 class="masthead-heading text-uppercase mb-0">Arbeidscontracten</h1>
+            <h1 class="masthead-heading text-uppercase mb-0">Welkom bij werkzoeken</h1>
             <!-- Icon Divider-->
             <div class="divider-custom divider-light">
                 <div class="divider-custom-line"></div>
                 <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                 <div class="divider-custom-line"></div>
             </div>
-            <p class="lead2">Het zoeken naar werk kan zeker spannend zijn. Hier hebben we een lijst met tips die je
-                kunnen helpen met het zoeken van werk: </p>
+            <p class="lead2">Hier vind je handigste informatie over het zoeken van werk.</p>
         </div>
     </header>
-    <!-- Portfolio Section-->
-    <section class="page-section portfolio" id="portfolio">
-        <div class="container">
-            <!-- Icon Divider-->
-            <div class="divider-custom">
-                <div class="divider-custom-line"></div>
-                <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                <div class="divider-custom-line"></div>
-            </div>
-            <!-- Portfolio Grid Items-->
-            <div class="row justify-content-center">
-                <h3 class="text-center">Maak een indrukwekkend cv</h3>
-                <p class="lead text-center mb-4">
-                    Zorg ervoor dat je cv duidelijk en professioneel is. Vermeld je opleiding, stages, vrijwilligerswerk
-                    en eventuele bijbanen.
-                </p>
-                <h3 class="text-center">Netwerken</h3>
-                <p class="lead text-center mb-4">
-                    Gebruik platforms zoals LinkedIn om in contact te komen met professionals in jouw vakgebied.
-                    Netwerken kan je helpen om verborgen vacatures te ontdekken.
-                </p>
-                <h3 class="text-center">Open sollicitaties</h3>
-                <p class="lead text-center mb-4">
-                    Stuur open sollicitaties naar bedrijven waar je graag zou willen werken, zelfs als ze geen vacatures
-                    hebben. Dit toont initiatief en kan deuren openen.
-                </p>
-                <h3 class="text-center">Doe ervaring op</h3>
-                <p class="lead text-center mb-4">
-                    Overweeg stages, vrijwilligerswerk of tijdelijke banen om ervaring op te doen en je cv te
-                    versterken.
-                </p>
-                <h3 class="text-center">Focus op persoonlijke ontwikkeling</h3>
-                <p class="lead text-center mb-4">
-                    Volg cursussen of trainingen om je vaardigheden te verbeteren en jezelf aantrekkelijker te maken
-                    voor werkgevers.
-                </p>
-                <h3 class="text-center">Gebruik je school als hulpbron</h3>
-                <p class="lead text-center mb-4">
-                    Veel scholen bieden loopbaanbegeleiding en hebben connecties met bedrijven.
-                </p>
-            </div>
-        </div>
-    </section>
+    
     <!-- Footer-->
     <footer class="footer text-center">
         <div class="container">
